--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
+    <p>These recipies were pulled from allrecipies.com just for testing</p>
 
     <ul>
         <li><a href="recipies/japanese_curry.html">Japanese Curry</a></li>
