--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin-Recipies</title>
+    <title>Odin-Recipes</title>
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <p>These recipies were pulled from allrecipies.com just for testing</p>
+    <p>These recipies were pulled from allrecipes.com just for testing</p>
 
     <ul>
-        <li><a href="recipies/japanese_curry.html">Japanese Curry</a></li>
-        <li><a href="recipies/sukiyaki.html">Beef Sukiyaki</a></li>
-        <li><a href="recipies/sunomono.html">Sunomono</a></li>
+        <li><a href="recipes/japanese_curry.html">Japanese Curry</a></li>
+        <li><a href="recipes/sukiyaki.html">Beef Sukiyaki</a></li>
+        <li><a href="recipes/sunomono.html">Sunomono</a></li>
     </ul>
     
 </body>
