--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Odin-Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipies</h1>
-    <p>These recipies were pulled from allrecipes.com just for testing</p>
+    <h1>Odin Recipes</h1>
+    <p>These recipes were pulled from allrecipes.com just for testing</p>
 
     <ul>
         <li><a href="recipes/japanese_curry.html">Japanese Curry</a></li>
